// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress component Should be Large 1`] = `
<progress
  className="progress is-large"
  max={100}
  style={Object {}}
  value={30}
/>
`;

exports[`Progress component Should concat classname in props with Bulma classname 1`] = `
<progress
  className="progress other-class this-is-a-test"
  max={100}
  style={Object {}}
  value={30}
/>
`;

exports[`Progress component Should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "backgroundColor": undefined,
    "className": "",
    "clearfix": undefined,
    "clipped": undefined,
    "color": null,
    "hidden": undefined,
    "invisible": undefined,
    "italic": undefined,
    "marginless": undefined,
    "overlay": undefined,
    "paddingless": undefined,
    "pull": undefined,
    "radiusless": undefined,
    "responsive": undefined,
    "shadowless": undefined,
    "size": null,
    "style": Object {},
    "textAlignment": undefined,
    "textColor": undefined,
    "textSize": undefined,
    "textTransform": undefined,
    "textWeight": undefined,
    "unselectable": undefined,
  },
  "propTypes": Object {
    "backgroundColor": [Function],
    "className": [Function],
    "clearfix": [Function],
    "clipped": [Function],
    "color": [Function],
    "hidden": [Function],
    "invisible": [Function],
    "italic": [Function],
    "marginless": [Function],
    "max": [Function],
    "overlay": [Function],
    "paddingless": [Function],
    "pull": [Function],
    "radiusless": [Function],
    "responsive": [Function],
    "shadowless": [Function],
    "size": [Function],
    "style": [Function],
    "textAlignment": [Function],
    "textColor": [Function],
    "textSize": [Function],
    "textTransform": [Function],
    "textWeight": [Function],
    "unselectable": [Function],
    "value": [Function],
  },
  "render": [Function],
}
`;

exports[`Progress component Should have notification classname 1`] = `
<progress
  className="progress"
  max={100}
  style={Object {}}
  value={30}
/>
`;

exports[`Progress component Should use inline styles 1`] = `
<progress
  className="progress"
  max={100}
  style={
    Object {
      "width": 250,
    }
  }
  value={30}
/>
`;

exports[`Progress component Should use use color black 1`] = `
<progress
  className="progress is-black"
  max={100}
  style={Object {}}
  value={30}
/>
`;

exports[`Progress component Should use use color danger 1`] = `
<progress
  className="progress is-danger"
  max={100}
  style={Object {}}
  value={30}
/>
`;

exports[`Progress component Should use use color dark 1`] = `
<progress
  className="progress is-dark"
  max={100}
  style={Object {}}
  value={30}
/>
`;

exports[`Progress component Should use use color info 1`] = `
<progress
  className="progress is-info"
  max={100}
  style={Object {}}
  value={30}
/>
`;

exports[`Progress component Should use use color light 1`] = `
<progress
  className="progress is-light"
  max={100}
  style={Object {}}
  value={30}
/>
`;

exports[`Progress component Should use use color link 1`] = `
<progress
  className="progress is-link"
  max={100}
  style={Object {}}
  value={30}
/>
`;

exports[`Progress component Should use use color null 1`] = `
<progress
  className="progress"
  max={100}
  style={Object {}}
  value={30}
/>
`;

exports[`Progress component Should use use color primary 1`] = `
<progress
  className="progress is-primary"
  max={100}
  style={Object {}}
  value={30}
/>
`;

exports[`Progress component Should use use color success 1`] = `
<progress
  className="progress is-success"
  max={100}
  style={Object {}}
  value={30}
/>
`;

exports[`Progress component Should use use color warning 1`] = `
<progress
  className="progress is-warning"
  max={100}
  style={Object {}}
  value={30}
/>
`;

exports[`Progress component Should use use color white 1`] = `
<progress
  className="progress is-white"
  max={100}
  style={Object {}}
  value={30}
/>
`;
